# 3DModelViewer

./: CMakeLists.txt  README.md  shader.frag  shader.vert
modules/renderer/: CMakeLists.txt
modules/renderer/include/: arrayUtils.hpp  camera.hpp  glUtils.hpp  material.hpp  mesh.hpp  renderBatch.hpp  renderObject.hpp  renderer.hpp  shader.hpp  window.hpp
modules/renderer/src/: arrayUtils.cpp  camera.cpp  glUtils.cpp  mesh.cpp  renderer.cpp  shader.cpp  window.cpp
src/: main.cpp
